<resources>
    <string name="app_name">QReader3</string>
    <string name="qr_hint">Hover to QR-code</string>
    <string name="text_copied">Copied to clipboard</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="copy">Copy</string>
    <string name="history">History</string>
    <string name="flashlight_turned_on">Flashlight turned on</string>
    <string name="flashlight_turned_off">Flashlight turned off</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="open_source_license">Open-source license</string>

    <string name="privacy_policy_link">https://sites.google.com/antixyz.ventures/qrscannerpp/</string>
    <string name="terms_conditions_link">https://sites.google.com/antixyz.ventures/termsqrcodescanner/</string>
</resources>