<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true">

            <LinearLayout
                android:id="@+id/btnFav1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/btnFav"
                    android:src="@drawable/hearttop"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/top_button_pressed"
                    app:tint="@color/lightgrey" />

                <TextView
                    android:id="@+id/txtFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="#525962"/>

                <View
                    android:id="@+id/lineViewFav"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnHistory1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/btnHistory"
                    android:src="@drawable/historytop"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/top_button_pressed"
                    app:tint="@color/lightgrey"/>

                <TextView
                    android:id="@+id/txtHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/lightgrey"/>

                <View
                    android:id="@+id/viewLineHistory"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnScan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/btnScan"
                    android:src="@drawable/scantop"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/top_button_pressed"
                    app:tint="@color/lightgrey"/>

                <TextView
                    android:id="@+id/txtScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/lightgrey"/>

                <View
                    android:id="@+id/viewLineScan"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lightId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnLight"
                    android:src="@drawable/ic_outline_flashlight_on_24"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/top_button_pressed"
                    app:tint="@color/lightgrey"
                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/btnLightBlocked"
                    android:src="@drawable/ic_outline_flashlight_off_24"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/top_button_pressed"
                    app:tint="@color/lightgrey"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txtLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/lightgrey"/>

                <View
                    android:id="@+id/viewLineLight"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSet1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/btnSet"
                    android:src="@drawable/settingstop"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/top_button_pressed"
                    app:tint="@color/lightgrey"/>

                <TextView
                    android:id="@+id/txtSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/lightgrey"/>

                <View
                    android:id="@+id/viewLineSet"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>


        </LinearLayout>



    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>